--- a/src/app/products/components/product-details/product-details.component.html
+++ b/src/app/products/components/product-details/product-details.component.html
@@ -2,54 +2,42 @@
     <div class="card">
         <div class="row product-page-main">
             <div class="col-xl-4">
-                <section>
-                 <img src="" alt="">
-                </section>
+                 <img [src]="product.ProductImg" alt="productImage" class="img-fluid img-full">
             </div>
             <div class="col-xl-8">
                 <div class="product-page-details">
-                    <h5>{{product.name}}</h5>
+                    <h5>{{product.ProductName}}</h5>
                     <div class="d-flex">
-                        <span>{{product.review}}</span>
+                        <span>200</span>
                     </div>
                 </div>
                 <hr>
-                <p>{{product.discription}}</p>
+                <p>{{product.ProductCategory}}</p>
                 <div class="product-price digits">
-                    <del>{{product.discountPrice | currency}}
-                    </del>{{product.price | currency}}
+                    <del>{{product.ProductPrice | currency}}
+                    </del>{{product.ProductPrice | currency}}
                 </div>
                 <hr>
                 <div>
                     <table class="product-page-width">
                         <tbody>
                             <tr>
-                                <td><b>Brand : </b>{{product.tags}}</td>
+                                <td><b>Brand : </b>{{product.ProductCategory}}</td>
                             </tr>
                             <tr>
-                                <td><b>Availability: </b>{{product.stock}}</td>
+                                <td><b>Availability: </b>{{product.Quantity}}</td>
 
                             </tr>
                         </tbody>
                     </table>
                 </div>
-                <hr>
-                <ul class="product-color m-t-15">
-                    <li class="bg-primary"></li>
-                    <li class="bg-secondary"></li>
-                    <li class="bg-success"></li>
-                    <li class="bg-info"></li>
-                    <li class="bg-warning"></li>
-                </ul>
-                <div class="m-t-15">
-                    <button class="btn btn-primary-gradien m-r-10" type="button"
-                        data-original-title="btn btn-info-gradien" [routerLink]="['/products/add-cart']"
-                        (click)="addToCart(product)" title="">
+                <div class="mt-2">
+                    <button class="btn btn-success mr-2" type="button" [routerLink]="['/products/add-cart']"
+                        (click)="addToCart(product)" title="Addtocart">
                         Add To Cart</button>
-                    <button class="btn btn-success-gradien" type="button" data-original-title="btn btn-info-gradien"
-                        (click)="buyNow(product)" title="">Buy Now</button>
-                    <button class="btn btn-primary-gradien m-r-10 m-l-10" type="button"
-                        data-original-title="btn btn-info-gradien" [routerLink]="['/products']" title="">
+                    <!-- <button class="btn btn-success mx-2" type="button" 
+                        (click)="buyNow(product)" title="BuyNow">Buy Now</button> -->
+                    <button class="btn btn-primary" type="button" [routerLink]="['/products']" title="Back">
                         Back To Product</button>
                 </div>
             </div>
