--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,10 @@ body {
     background-color: #121212 !important;
     color: #ccc !important;
 }
+
+.img-60{
+    width: 60px !important;
+  }
+  .img-full{
+      width: 100% !important;
+  }
