--- a/src/app/orders/components/orders-list/orders-list.component.html
+++ b/src/app/orders/components/orders-list/orders-list.component.html
@@ -1,1 +1,61 @@
-<p>orders-list works!</p>
+<div class="container-fluid">
+  <div class="col-sm-12 empty-cart-cls text-center" *ngIf="!orders.length">
+    <img src="assets/images/icon-empty-cart.png" class="img-fluid mb-4">
+    <h3><strong>Your Cart is Empty</strong></h3>
+    <h4><strong>Add something to make me happy :)</strong></h4>
+    <a class="btn btn-primary cart-btn-transform my-2" [routerLink]="['/products']">continue shopping</a>
+  </div>
+  <div class="row"  *ngIf="orders.length">
+    <div class="col-sm-12">
+        <div class="card">
+          <div class="card-header">
+            <h5>Add To Cart</h5>
+          </div>
+          <div class="card-body cart">
+            <div class="order-history table-responsive wishlist">
+              <table class="table table-bordernone">
+                <thead>
+                  <tr>
+                    <th>Prdouct</th>
+                    <th>Prdouct Name</th>
+                    <th>Price</th>
+                    <th>Quantity</th>
+                    <th>Total</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr class="title-orders">
+                    <td colspan="12">New Orders</td>
+                  </tr>
+                  <tr *ngFor="let item of orders">
+                    <td><img class="img-fluid img-60" [src]="[item.ProductImg]" alt="produvrImage"></td>
+                    <td>
+                      <div class="product-name"><a
+                          [routerLink]="['/products/product-details', item.ProductId]">{{item.ProductName}}</a></div>
+                    </td>
+                    <td>{{item.ProductPrice | currency}}</td>
+                    <td>
+                      {{item.Quantity}}
+                    </td>
+                  
+                    <td>{{ item.ProductPrice * 2 | currency}}</td>
+                  <tr>
+                    <td class="total-amount" colspan="4">
+                      <h6 class="m-0"> <span class="f-w-600">Total Price:</span></h6>
+                    </td>
+                    <td><span>{{ 12323 | currency}} </span></td>
+                  </tr>
+                  <tr>
+                    <td colspan="4"><a class="btn btn-primary cart-btn-transform"
+                        [routerLink]="['/products']">continue shopping</a></td>
+                    <td><a class="btn btn-primary cart-btn-transform" [routerLink]="['/products/check-out']">check
+                        out</a></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+</div>
