--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header">
     <div class="top-head d-flex">
-        <div class="logo">
-            <img src="assets/images/logo_k12.png" alt="logo">
+        <div class="logo text-success text-bold">
+            Softec-Task-Ahmed-Mobasher
         </div>
 
         <div class="right-side">
@@ -33,7 +33,7 @@
     <div class="headings">
         <h2>BUY ONLINE</h2>
         <p>
-            <span class="ml-5 mr-2"> Buy any product,anytime.Explore thousand of
+            <span class="ml-5 mr-2">Explore thousand of
                 products starting at $11.99 each</span>
         </p>
     </div>
