--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,6 +3,7 @@
 
 .header {
     margin: 30px;
+    cursor: pointer;
     .top-head {
         justify-content: space-between;
         flex-wrap: wrap;
@@ -64,8 +65,9 @@
 .bottom-head {
     padding: 10px 0;
     margin-top: -60px;
-    background: url("../../assets/images/math.png") top no-repeat;
-    height: 250px;
+    background: url("../../assets/images/backgroud11.jpg") bottom no-repeat;
+    background-size: cover;
+    height: 275px;
     h1 {
         color: yellow;
         font-size: 100px;
