--- a/src/app/orders/components/orders-list/orders-list.component.html
+++ b/src/app/orders/components/orders-list/orders-list.component.html
@@ -1,11 +1,11 @@
 <div class="container-fluid">
-  <div class="col-sm-12 empty-cart-cls text-center" *ngIf="!orders.length">
+  <div class="col-sm-12 empty-cart-cls text-center my-2" *ngIf="!orders.length">
     <img src="assets/images/icon-empty-cart.png" class="img-fluid mb-4">
     <h3><strong>Your Cart is Empty</strong></h3>
     <h4><strong>Add something to make me happy :)</strong></h4>
     <a class="btn btn-primary cart-btn-transform my-2" [routerLink]="['/products']">continue shopping</a>
   </div>
-  <div class="row"  *ngIf="orders.length">
+  <div class="row my-3"  *ngIf="orders.length">
     <div class="col-sm-12">
         <div class="card">
           <div class="card-header">
@@ -20,6 +20,7 @@
                     <th>Prdouct Name</th>
                     <th>Price</th>
                     <th>Quantity</th>
+                    <th>Actions</th>
                     <th>Total</th>
                   </tr>
                 </thead>
@@ -35,20 +36,30 @@
                     </td>
                     <td>{{item.ProductPrice | currency}}</td>
                     <td>
-                      {{item.Quantity}}
+                      <div class="qty-box">
+                        <div class="input-group">
+                          <i class="fa fa-minus btnGtr" (click)="decrement(item.ProductId)"></i>
+                          <input class="touchspin1 text-center" name="quantity" type="text" disabled
+                            [value]="item.Count">
+                          <i class="fa fa-plus btnLess" (click)="increment(item.ProductId)"></i>
+                        </div>
+                      </div>
+                    </td>
+                    <td>
+                      <i class="fa fa-remove remove" (click)="removeItem(item.ProductId)"></i>
                     </td>
                   
-                    <td>{{ item.ProductPrice * 2 | currency}}</td>
+                    <td>{{ item.ProductPrice * item.Count | currency}}</td>
                   <tr>
-                    <td class="total-amount" colspan="4">
+                    <td class="total-amount" colspan="5">
                       <h6 class="m-0"> <span class="f-w-600">Total Price:</span></h6>
                     </td>
-                    <td><span>{{ 12323 | currency}} </span></td>
+                    <td><span>{{ getTotal() | currency}} </span></td>
                   </tr>
                   <tr>
-                    <td colspan="4"><a class="btn btn-primary cart-btn-transform"
+                    <td colspan="5"><a class="btn btn-primary cart-btn-transform"
                         [routerLink]="['/products']">continue shopping</a></td>
-                    <td><a class="btn btn-primary cart-btn-transform" [routerLink]="['/products/check-out']">check
+                    <td><a class="btn btn-primary cart-btn-transform" [routerLink]="['/orders/checkout']">check
                         out</a></td>
                   </tr>
                 </tbody>
