--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,12 @@ body {
   .img-full{
       width: 100% !important;
   }
+
+  .card{
+    color: black !important;
+    padding: 20px;
+    margin: 20px 0;
+    .card-header{
+        background-color: white !important;
+    }
+}
